created homepage search bar

--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -2,15 +2,8 @@
 {% include 'recipes/partials/head.html' %}
 
 <body>
-    <header class="main-header-container">
-        <div class="main-header container">
-            <a class="main-logo" href="/">
-                <h1>
-                    <i class="fa-solid fa-utensils main-logo-icon"></i>
-                    <span class="main-logo-text">Recipes</span>
-                </h1>
-            </a>
-        </div>
-    </header>
+    {% include 'recipes/partials/header.html' %}
+
+    {% include 'recipes/partials/search.html' %}
 </body>
 </html>
